syntax = "proto3";

option java_package = "tech.silantev.course.ddd.microarch.adapters.grpc";
option java_multiple_files = true;

// The Geo service definition.
service Geo {

  // Get Geolocation
  rpc GetGeolocation (GetGeolocationRequest) returns (GetGeolocationReply);
}

// Request
message GetGeolocationRequest {
  string Street = 1;
}

// Response
message GetGeolocationReply {
  Location Location = 1;
}

// Geolocation
message Location {
  int32 x = 1;
  int32 y = 2;
}

message ErrorResponse {
  string text = 1;
}
